Adding header image

--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hoofsteps to Healing</title>
     <style>
+        header {
+            margin: 0 auto 30px auto;
+        }
+
+        .header-image {
+            width: 100%;
+            height: auto;
+            display: block;
+            max-height: 500px;
+            object-fit: cover;
+            border-radius: 8px;
+        }
+
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
@@ -34,6 +47,10 @@
     </style>
 </head>
 <body>
+    <header>
+        <img src="images/Quality&Seamus_GrassUpgrade.png" alt="Quality and Seamus in the field" class="header-image" />
+    </header>
+
     <h1>Hoofsteps to Healing</h1>
     <h2>Equine Facilitated Psychotherapy</h2>
 
