--- a/index.html
+++ b/index.html
@@ -5,26 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hoofsteps to Healing</title>
     <style>
-        header {
-            margin: 0 auto 30px auto;
-        }
-
-        .header-image {
-            width: 100%;
-            height: auto;
-            display: block;
-            max-height: 500px;
-            object-fit: cover;
-            border-radius: 8px;
-        }
-
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
             margin: 0;
-            padding: 20px;
+            padding: 0;
             background: #f5f5f5;
             color: #333;
+        }
+
+        header {
+            margin: 0;
+            padding: 0;
+        }
+
+        .header-image {
+            display: block;
+            width: 100%;
+            height: auto;
+            max-width: none;
+            margin: 0;
+            border: none;
         }
 
         h1, h2, h3 {
