--- a/index.html
+++ b/index.html
@@ -14,6 +14,31 @@
             color: #333;
         }
 
+        .hero-header {
+            position: relative;
+            margin: 0;
+            padding: 0;
+        }
+
+
+        .header-banner {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            background: rgba(255, 255, 255, 0.95); /* White banner with slight transparency */
+            display: flex;
+            align-items: center;
+            padding: 10px 20px;
+            z-index: 2;
+            box-sizing: border-box;
+        }
+
+        .logo {
+            height: 60px;
+            width: auto;
+        }
+
         header {
             margin: 0;
             padding: 0;
@@ -48,6 +73,13 @@
     </style>
 </head>
 <body>
+    <header class="hero-header">
+        <div class="header-banner">
+            <img src="images/HoofstepsToHealingLogo.png" alt="Hoofsteps to Healing Logo" class="logo" />
+        </div>
+        <img src="images/Quality&Seamus_GrassUpgrade.jpg" alt="Quality and Seamus in the field" class="header-image" />
+    </header>
+
     <header>
         <img src="images/Quality&Seamus_GrassUpgrade.png" alt="Quality and Seamus in the field" class="header-image" />
     </header>
