--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            background: rgba(255, 255, 255, 0.95); /* White banner with slight transparency */
+            background: rgba(255, 255, 255);
             display: flex;
             align-items: center;
             padding: 10px 20px;
