--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Hoofsteps to Healing</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
+            font-family: 'Georgia', serif;
+            line-height: 1.8;
             margin: 0;
             padding: 0;
-            background: #f5f5f5;
-            color: #333;
+            background: #fdfcf9;
+            color: #3a3a3a;
         }
 
         .hero-header {
@@ -19,7 +19,6 @@
             margin: 0;
             padding: 0;
         }
-
 
         .header-banner {
             position: absolute;
@@ -39,11 +38,6 @@
             width: auto;
         }
 
-        header {
-            margin: 0;
-            padding: 0;
-        }
-
         .header-image {
             display: block;
             width: 100%;
@@ -53,16 +47,42 @@
             border: none;
         }
 
-        h1, h2, h3 {
+        main {
+            max-width: 900px;
+            margin: 0 auto;
+            padding: 40px 20px;
+        }
+
+        h1, h2, h3, h4 {
             color: #4a2c2a;
         }
 
-        section {
-            margin-bottom: 40px;
+        h2 {
+            font-size: 1.8em;
+            margin-top: 0;
         }
 
-        .horse {
-            margin-bottom: 20px;
+        section {
+            margin-bottom: 60px;
+        }
+
+        .horse, .therapist {
+            margin-bottom: 30px;
+        }
+
+        .portrait {
+            width: 100%;
+            max-width: 300px;
+            border-radius: 8px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+            margin: 10px 0;
+        }
+
+        .image-group {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            margin-top: 20px;
         }
 
         iframe {
@@ -80,78 +100,80 @@
         <img src="images/Quality&Seamus_GrassUpgrade.jpg" alt="Quality and Seamus in the field" class="header-image" />
     </header>
 
-    <header>
-        <img src="images/Quality&Seamus_GrassUpgrade.png" alt="Quality and Seamus in the field" class="header-image" />
-    </header>
+    <main>
+        <h2>Equine Facilitated Psychotherapy</h2>
+        <section>
+            <p>Discover the transformative power of Equine Facilitated Psychotherapy at Hoofsteps to Healing.</p>
+            <p>Experience emotional growth and self-discovery in a peaceful, natural setting with Clinical Psychologist, Dr Sarah Skelton, and her gentle herd of horses.</p>
+        </section>
 
-    <h1>Hoofsteps to Healing</h1>
-    <h2>Equine Facilitated Psychotherapy</h2>
+        <section>
+            <h3>What is <em>Equine Facilitated Psychotherapy</em> (EFP)?</h3>
+            <p>Equine Facilitated Psychotherapy (EFP) is a unique therapeutic approach that incorporates horses into the therapy process. It offers a collaborative experience between the therapist, the horse, and the client—designed to promote emotional healing through connection, presence, and compassion.</p>
+            <p>Horses communicate primarily through body language and energy. Their sensitivity to human emotion helps mirror internal states and patterns, supporting deep, somatic healing. Sessions take place in nature and focus on experience over explanation.</p>
+            <p>EFP encourages authenticity. Horses do not judge—they respond to how we feel, not how we appear. This provides a foundation of safety and emotional freedom in which to heal.</p>
+            <p>Common areas explored in therapy include:</p>
+            <ul>
+                <li>Anxiety</li>
+                <li>Low mood</li>
+                <li>Trauma</li>
+                <li>Self-esteem</li>
+                <li>Identity</li>
+            </ul>
+            <p>Currently welcoming self-referrals for individuals aged 18 and over.</p>
+        </section>
 
-    <section>
-        <p>Discover the transformative power of Equine Facilitated Psychotherapy at Hoofsteps to Healing.</p>
-        <p>Experience emotional growth and self-discovery in a unique therapeutic environment with Clinical Psychologist, Dr Sarah Skelton and her herd of horses.</p>
-    </section>
+        <section>
+            <h3>How is EFP different from Equine Facilitated Learning (EFL)?</h3>
+            <p>While EFP is delivered by a qualified mental health professional and focuses on therapeutic goals, EFL is typically facilitated by educators or coaches and focuses on personal development, leadership, and learning. Both use the healing presence of horses—EFP, however, holds a deeper clinical framework.</p>
+        </section>
 
-    <section>
-        <h3>What is <em>Equine Facilitated Psychotherapy</em> (EFP)?</h3>
-        <p>Equine Facilitated Psychotherapy (EFP) is a unique therapeutic approach that incorporates horses into the therapy process. It's a collaborative experience between a therapist, a horse, and the client, designed to promote emotional growth and healing through interaction with horses.</p>
-        <p>It involves human-horse interactions, and these interactions often mirror internal emotional states and relational patterns. As herd animals, horses are powerful communicators using energy and non-verbal cues. This can take the emphasis off the spoken word, as traditional talking therapies tend to do, and onto emotional and somatic based experiences. Sessions happen outside in nature, providing a sensory rich experience.</p>
-        <p>Horses are wonderful in the field of psychotherapy as they do not judge. They take you as you are. This helps to create relational safety and freedom to discover and experience a truly authentic self. In EFP, horses are equal partners in terms of facilitating sessions.</p>
-        <p>A range of issues can be explored and are not limited to the following:</p>
-        <ul>
-            <li>Anxiety</li>
-            <li>Low mood</li>
-            <li>Trauma</li>
-            <li>Self-esteem</li>
-            <li>Identity</li>
-        </ul>
-        <p>I am currently taking self-referrals from clients aged 18 years old and older.</p>
-    </section>
+        <section class="therapist">
+            <h3>Dr. Sarah Skelton</h3>
+            <p>I’m an HCPC-registered clinical psychologist and lifelong equestrian. I trained with LEAP to achieve a Level 5 Diploma in Equine Facilitated Psychotherapy. My approach is trauma-informed, neuroaffirmative, and LGBTQ+ inclusive. With many years of NHS experience, I strive to offer a safe, respectful, and healing environment beyond the traditional therapy room.</p>
+            <div class="image-group">
+                <img src="images/SarahProfilePicture.jpg" alt="Dr. Sarah Skelton" class="portrait">
+                <img src="images/Sarah&Quality.jpg" alt="Sarah and Quality" class="portrait">
+                <img src="images/Sarah&Seamus.jpg" alt="Sarah and Seamus" class="portrait">
+                <img src="images/SarahQuality&Seamus.jpg" alt="Sarah with Quality and Seamus" class="portrait">
+            </div>
+        </section>
 
-    <section>
-        <h3>How does EFP differ to Equine Facilitated Learning (EFL)?</h3>
-        <p>EFP is practiced by a mental health professional and focuses on emotional growth, healing, and therapeutic goals. EFL, on the other hand, is facilitated by various professionals and focuses on self-development and education using equine interactions.</p>
-    </section>
+        <section>
+            <h3>Meet the Horses</h3>
+            <div class="horse">
+                <h4>Quality – Irish Sport Horse</h4>
+                <p>Quality is a 10-year-old, 15.2 hh bright bay Irish Sports Horse. Sensitive and intuitive, he gently encourages trust and presence in those around him.</p>
+                <div class="image-group">
+                    <img src="images/Quality.jpg" alt="Quality the horse" class="portrait">
+                    <img src="images/QualityCloseUp.jpg" alt="Close up of Quality" class="portrait">
+                </div>
+            </div>
+            <div class="horse">
+                <h4>Seamus – Shetland Pony</h4>
+                <p>Seamus is an 11-year-old, 8.2 hh brown and white skewbald Shetland Pony. Playful and curious, he helps clients connect with their inner joy and spontaneity.</p>
+                <div class="image-group">
+                    <img src="images/SeamusCloseUp.jpg" alt="Seamus the Shetland pony" class="portrait">
+                </div>
+            </div>
+        </section>
 
-    <section>
-        <h3>Session Structure</h3>
-        <p>Sessions are tailored to help you achieve your goals. The first session is an assessment to explore presenting issues, set goals, and build a plan. Each session is 90 minutes. Structure is client-led to best suit your needs.</p>
-    </section>
+        <section>
+            <h3>Schedule Your Session Today</h3>
+            <p>If you'd like to explore whether Equine Facilitated Psychotherapy is right for you, you're welcome to book a free 15-minute consultation via Zoom:</p>
+            <iframe src="https://calendly.com/YOUR-CALENDLY-USERNAME"></iframe>
+        </section>
 
-    <section>
-        <h3>Dr. Sarah Skelton</h3>
-        <p>I am an HCPC registered clinical psychologist with a lifelong love of horses. I trained with LEAP and achieved the Level 5 Diploma in Equine Facilitated Psychotherapy. My approach is trauma-informed, neuroaffirmative, and LGBTQ+ affirmative. I have extensive NHS experience and aim to create a healing space beyond traditional therapy rooms.</p>
-    </section>
+        <section>
+            <h3>Fees</h3>
+            <p>£90 per 90-minute session</p>
+        </section>
 
-    <section>
-        <h3>Meet the Horses</h3>
-        <div class="horse">
-            <h4>Quality – Irish Sport Horse</h4>
-            <p>10-year-old, 15.2 hh bright bay Irish Sports Horse. Sensitive, people-loving, and great at encouraging patience and trust.</p>
-        </div>
-        <div class="horse">
-            <h4>Seamus – Shetland Pony</h4>
-            <p>11-year-old, 8.2 hh brown and white skewbald Shetland Pony. Cheeky and fun, he helps people tap into playfulness and joy.</p>
-        </div>
-    </section>
-
-    <section>
-        <h3>Schedule Your Session Today</h3>
-        <p>If you would like to learn more about EFP, please book a free 15-minute consultation on Zoom below:</p>
-        <!-- Calendly Embed -->
-        <iframe src="https://calendly.com/YOUR-CALENDLY-USERNAME"></iframe>
-    </section>
-
-    <section>
-        <h3>Fees</h3>
-        <p>£90 for a 90-minute session</p>
-    </section>
-
-    <section>
-        <h3>Our Policies & Procedures</h3>
-        <p><strong>GDPR and Confidentiality Notice</strong></p>
-        <p>We are committed to protecting your privacy and ensuring confidentiality. Your data is securely stored and only used for therapeutic purposes. All sessions are strictly confidential. You have full rights to access, amend or delete your data.</p>
-    </section>
-
+        <section>
+            <h3>Policies & Confidentiality</h3>
+            <p><strong>GDPR and Confidentiality Notice:</strong></p>
+            <p>Your privacy is a priority. All personal information is stored securely and used solely for therapeutic purposes. Sessions are strictly confidential, and you have the right to access, amend, or request deletion of your data at any time.</p>
+        </section>
+    </main>
 </body>
 </html>
