--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="header-banner">
             <img src="images/HoofstepsToHealingLogo.png" alt="Hoofsteps to Healing Logo" class="logo" />
         </div>
-        <img src="images/Quality&Seamus_GrassUpgrade.jpg" alt="Quality and Seamus in the field" class="header-image" />
+        <img src="images/Quality&Seamus_GrassUpgrade.png" alt="Quality and Seamus in the field" class="header-image" />
     </header>
 
     <main>
