--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Hoofsteps to Healing</title>
     <style>
         body {
-            font-family: 'Georgia', serif;
+            font-family: 'Helvetica Neue', sans-serif;
             line-height: 1.8;
             margin: 0;
             padding: 0;
-            background: #fdfcf9;
-            color: #3a3a3a;
+            background: #f1f7f5;
+            color: #2e3d34;
         }
 
         .hero-header {
@@ -25,12 +25,13 @@
             top: 0;
             left: 0;
             width: 100%;
-            background: rgba(255, 255, 255);
+            background: rgba(255, 255, 255, 0.95);
             display: flex;
             align-items: center;
             padding: 10px 20px;
             z-index: 2;
             box-sizing: border-box;
+            box-shadow: 0 2px 6px rgba(0,0,0,0.05);
         }
 
         .logo {
@@ -50,15 +51,17 @@
         main {
             max-width: 900px;
             margin: 0 auto;
-            padding: 40px 20px;
+            padding: 60px 24px;
+            background: white;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.03);
         }
 
         h1, h2, h3, h4 {
-            color: #4a2c2a;
+            color: #2b4633;
         }
 
         h2 {
-            font-size: 1.8em;
+            font-size: 2em;
             margin-top: 0;
         }
 
@@ -73,15 +76,15 @@
         .portrait {
             width: 100%;
             max-width: 300px;
-            border-radius: 8px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
-            margin: 10px 0;
+            height: auto;
+            border-radius: 12px;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.06);
         }
 
         .image-group {
             display: flex;
             flex-wrap: wrap;
-            gap: 20px;
+            gap: 24px;
             margin-top: 20px;
         }
 
@@ -89,6 +92,16 @@
             width: 100%;
             height: 600px;
             border: none;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+        }
+
+        p, li {
+            font-size: 1.1em;
+        }
+
+        ul {
+            padding-left: 20px;
         }
     </style>
 </head>
