--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            background: rgba(255, 255, 255);
+            background: rgba(255, 255, 255, 0.95);
             display: flex;
             align-items: center;
             padding: 10px 20px;
@@ -117,7 +117,8 @@
         <h2>Equine Facilitated Psychotherapy</h2>
         <section>
             <p>Discover the transformative power of Equine Facilitated Psychotherapy at Hoofsteps to Healing.</p>
-            <p>Experience emotional growth and self-discovery in a peaceful, natural setting with Clinical Psychologist, Dr Sarah Skelton, and her gentle herd of horses.</p>
+            $1
+            <img src="images/SarahQuality&Seamus.jpg" alt="Sarah with Quality and Seamus" style="width:100%; height:auto; margin-top:20px; border-radius:12px; box-shadow: 0 6px 12px rgba(0,0,0,0.06);" />
         </section>
 
         <section>
