Centring and reducing size of images

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            background: rgba(255, 255, 255, 0.95);
+            background: #ffffff;
             display: flex;
             align-items: center;
             padding: 10px 20px;
@@ -34,19 +34,9 @@
             box-shadow: 0 2px 6px rgba(0,0,0,0.05);
         }
 
-        .logo {
-            height: 60px;
-            width: auto;
-        }
+        $160px$2
 
-        .header-image {
-            display: block;
-            width: 100%;
-            height: auto;
-            max-width: none;
-            margin: 0;
-            border: none;
-        }
+        $1100%$2
 
         main {
             max-width: 900px;
@@ -58,6 +48,7 @@
 
         h1, h2, h3, h4 {
             color: #2b4633;
+            text-align: center;
         }
 
         h2 {
@@ -67,6 +58,7 @@
 
         section {
             margin-bottom: 60px;
+            text-align: center;
         }
 
         .horse, .therapist {
@@ -74,8 +66,7 @@
         }
 
         .portrait {
-            width: 100%;
-            max-width: 300px;
+            width: 50%;
             height: auto;
             border-radius: 12px;
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.06);
@@ -83,6 +74,7 @@
 
         .image-group {
             display: flex;
+            justify-content: center;
             flex-wrap: wrap;
             gap: 24px;
             margin-top: 20px;
@@ -98,10 +90,13 @@
 
         p, li {
             font-size: 1.1em;
+            text-align: justify;
         }
 
         ul {
             padding-left: 20px;
+            text-align: left;
+            display: inline-block;
         }
     </style>
 </head>
@@ -118,7 +113,7 @@
         <section>
             <p>Discover the transformative power of Equine Facilitated Psychotherapy at Hoofsteps to Healing.</p>
             <p>Experience emotional growth and self-discovery in a peaceful, natural setting with Clinical Psychologist, Dr Sarah Skelton, and her gentle herd of horses.</p>
-            <img src="images/SarahQuality&Seamus.jpg" alt="Sarah with Quality and Seamus" style="width:70%; height:auto; margin-top:20px; border-radius:12px; box-shadow: 0 6px 12px rgba(0,0,0,0.06);" />
+            <img src="images/SarahQuality&Seamus.jpg" alt="Sarah with Quality and Seamus" style="width:50%; height:auto; margin-top:20px; border-radius:12px; box-shadow: 0 6px 12px rgba(0,0,0,0.06);" />
         </section>
 
         <section>
