--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            background: rgba(255, 255, 255, 0.95);
+            background: rgba(255, 255, 255);
             display: flex;
             align-items: center;
             padding: 10px 20px;
@@ -149,7 +149,6 @@
                 <img src="images/SarahProfilePicture.jpg" alt="Dr. Sarah Skelton" class="portrait">
                 <img src="images/Sarah&Quality.jpg" alt="Sarah and Quality" class="portrait">
                 <img src="images/Sarah&Seamus.jpg" alt="Sarah and Seamus" class="portrait">
-                <img src="images/SarahQuality&Seamus.jpg" alt="Sarah with Quality and Seamus" class="portrait">
             </div>
         </section>
 
