--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@
         <section>
             <p>Discover the transformative power of Equine Facilitated Psychotherapy at Hoofsteps to Healing.</p>
             <p>Experience emotional growth and self-discovery in a peaceful, natural setting with Clinical Psychologist, Dr Sarah Skelton, and her gentle herd of horses.</p>
-            <img src="images/SarahQuality&Seamus.jpg" alt="Sarah with Quality and Seamus" style="width:70%; height:auto; margin-top:20px; border-radius:12px; box-shadow: 0 6px 12px rgba(0,0,0,0.06);" />
+            <div style="text-align: center;">
+                <img src="images/SarahQuality&Seamus.jpg" alt="Sarah with Quality and Seamus" style="width:50%; height:auto; margin-top:20px; border-radius:12px; box-shadow: 0 6px 12px rgba(0,0,0,0.06);" />
+            </div>
         </section>
 
         <section>
