--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             flex-wrap: wrap;
             gap: 24px;
             margin-top: 20px;
-            align-content: center;
+            text-align: center;
         }
 
         iframe {
