--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
 
         .image-group {
             display: flex;
+            justify-content: center;
             flex-wrap: wrap;
             gap: 24px;
             margin-top: 20px;
-            text-align: center;
         }
 
         iframe {
